# qbx

./: .gitattributes  .gitignore  .lldbinit  CLAUDE.md  EXECUTION_PATH_DIAGRAM.md  IMPLEMENTATION_GUIDE.md  README.md  SYNCHRONIZATION_FIX_PLAN.md  THREAD_SAFETY_ANALYSIS.md  THREAD_SAFETY_SUMMARY.txt  _env.sh  build.sh  generate_test_wav  generate_test_wav.cpp  rebuild.sh
smaragd/: CMakeLists.txt  Doxyfile  Makefile  build  mkpro  project.qxp  smaragd.pro
smaragd/build_macos/: .ninja_deps  .ninja_log  build.ninja
smaragd/build_macos/.qt/: QtDeploySupport.cmake  QtDeployTargets.cmake
smaragd/docs/: ARCHITECTURE.md  AUDIO_IO_ARCHITECTURE.md  COMPONENTS.md  COMPONENT_LOCKING_STRATEGY.md  COMPONENT_MIGRATION_GUIDE.md  FINE_GRAINED_LOCKING_TWSPEAKER.md  PARENT_TRACKING_VALIDATION.md  PLAYBACK_START.md  SIGNAL_CHAIN.md  TESTING_AND_PERFORMANCE.md  TWPLUGININSERT_THREAD_SAFETY_ANALYSIS.md  TWSPEAKER_TRACKMIX_RACE_CONDITIONS.md
smaragd/examples/: selection_demo.qxa
smaragd/include/: exc.h  twsyslog.h
smaragd/main/: CMakeLists.txt
smaragd/main/actions/: CONTRACT.md
smaragd/main/docs/: IMPLEMENTATION_SUMMARY.md  PHASE5B_PLAYBACK_UNIFICATION_COMPLETE.md  PHASE5C_RENDER_UNIFICATION_COMPLETE.md  PHASE5_UNIFIED_PLAYBACK_RENDER.md  TEST_PLAN.md  TRACK_COLOR_MODIFIER_CONCEPT.md  UNIFIED_RENDERING_ARCHITECTURE.md  UNIFIED_RENDERING_ARCHITECTURE_V2.md
smaragd/main/include/: sactionhistory.h  sactionqueue.h  sactionrunner.h  sactionscript.h  sactionundocommand.h  sapplication.h  scut.h  scutrndrinline.h  sexternfile.h  sexternfilelist.h  sgrainfile.h  sgrainfilerndrinline.h  sgridtoolbar.h  slink.h  smainwindow.h  sobject.h  sobjectrenderer.h  soptionsdialog.h  splainwave.h  splainwaverndrinline.h  spluginchain.h  splugineffectstrip.h  spluginparamereditor.h  spluginslot.h  sproject.h  sprojectloader.h  sprojectprops.h  srecordingprogress.h  srenderdialog.h  srenderprogress.h  sselectionmanager.h  ssettings.h  ssmvmixercontrol.h  sstdmixer.h  sstdmixerview.h  strack.h  strackdetailpanel.h  strackheaderresizer.h  strackrndrinline.h  swaveformdraw.h
smaragd/main/model/: CONTRACT.md
smaragd/main/persistence/: CONTRACT.md
smaragd/main/pluginui/: CONTRACT.md
smaragd/main/resources/: fonts.qrc
smaragd/main/selection/: CONTRACT.md
smaragd/main/servicesui/: CONTRACT.md
smaragd/main/shell/: CONTRACT.md
smaragd/main/src/: action_roundtrip_test.cpp  main.cpp  sactionhistory.cpp  sactionqueue.cpp  sactionregistry.cpp  sactionrunner.cpp  sactionscript.cpp  sactionundocommand.cpp  sapplication.cpp  scut.cpp  scutrndrinline.cpp  sexternfile.cpp  sexternfilelist.cpp  sgrainfile.cpp  sgrainfilerndrinline.cpp  sgridtoolbar.cpp  slink.cpp  smainwindow.cpp  sobject.cpp  sobjectrenderer.cpp  sobjecttreeview.cpp  soptions.cpp  soptionsdialog.cpp  splainwave.cpp  splainwaverndrinline.cpp  spluginbrowserdialog.cpp  spluginchain.cpp  splugineffectstrip.cpp  spluginparamereditor.cpp  spluginslot.cpp  sproject.cpp  sprojectloader.cpp  srecordingprogress.cpp  srenderdialog.cpp  srenderprogress.cpp  sselectionmanager.cpp  ssettings.cpp  ssmvmixercontrol.cpp  sstdmixer.cpp  sstdmixerview.cpp  (+7 more)
smaragd/main/testkit/: CONTRACT.md
smaragd/main/timeline/: CONTRACT.md
smaragd/pix/: playoff.xcf  playoff.xpm  playon.xcf  playon.xpm  recoff.xcf  recoff.xpm  recon.xcf  recon.xpm  stopoff.xcf  stopoff.xpm  zoomin.xcf  zoomin.xpm  zoomout.xcf  zoomout.xpm
smaragd/plan/: AUDIO_LATENCY_CONTROL.md  PHASE_6_READAHEAD_PAGE_CACHE_FIX.md  STATE_SELECTION_SYSTEM.md
smaragd/tests/: load_fixture.qxp  repeat_test.sh
smaragd/tests/cases/: asset_copy_undo_restores.qxa  asset_over_muted_container.qxa  asset_placement_undo_restores.qxa  asset_window_offset.qxa  asset_window_shifted_content.qxa  clip_starts_before_data.qxa  delete_clip_undo_restores.qxa  exact_stretch_roundtrip.qxa  extend_clip_past_content.qxa  folder_track_sums_once.qxa  grain_loop_stretch.qxa  grain_minimal_stretch.qxa  grain_multiple_stretch_factors.qxa  grain_pitch_octave_up.qxa  grain_pitch_reset_roundtrip.qxa  grain_pitch_semitone_down.qxa  grain_pitch_with_stretch.qxa  grain_split_delete_crash.qxa  grain_time_stretch_2x.qxa  grain_time_stretch_half.qxa  grain_with_energy_verification.qxa  grain_with_volume_control.qxa  load_project_render.qxa  log_dock_scale.qxa  loop_asset_extend.qxa  loop_start_edge_drag.qxa  mute_invalidates_cache.qxa  mute_nested_track.qxa  mute_silences_track.qxa  mute_survives_reload.qxa  plugin_remove_during_playback.qxa  render_after_edit_same_track.qxa  render_after_edit_sibling_tracks.qxa  render_after_edit_stale_cache.qxa  render_sawtooth_clipped_section.qxa  render_sawtooth_first_100ms.qxa  render_sawtooth_first_second.qxa  render_sawtooth_minimal.qxa  render_sawtooth_multiple_clips.qxa  render_sawtooth_with_effects.qxa  (+15 more)
smaragd/tw303a/: CMakeLists.txt
smaragd/tw303a/analysis/: CONTRACT.md
smaragd/tw303a/compat/: audio_analysis.h  capture_aspects.h  capture_page_pool.h  capture_revalidator.h  exc.h  io_vector.h  page_interface.h  recording_session.h  render_session.h  revalidatable.h  tw303aenv.h  tw_freeze_context.h  tw_output_page.h  twcapturingsource.h  twcomponent.h  twconstant.h  twconvert.h  twformat.h  twfraction.h  twgrainparams.h  twgrainsource.h  twlatch.h  twloopreader.h  twmixer.h  twmoog.h  twnegotiator.h  twosc.h  twpipe.h  twpluginchain.h  twplugininsert.h  twrandomsource.h  twresampledsource.h  twresampler.h  twrewire.h  twsamplereader.h  twsamplesource.h  twsaw.h  twsimplesaw.h  twspeaker.h  twsyslog.h  (+7 more)
smaragd/tw303a/core/: CONTRACT.md
smaragd/tw303a/devices/: CONTRACT.md
smaragd/tw303a/dsp/: CONTRACT.md
smaragd/tw303a/graph/: CONTRACT.md
smaragd/tw303a/include/: capture_page_pool.h  capture_revalidator.h  io_vector.h  recording_session.h  render_session.h  revalidatable.h  tw303aenv.h  tw_freeze_context.h  tw_output_page.h  twcapturingsource.h  twcomponent.h  twconstant.h  twconvert.h  twformat.h  twgrainer.h  twgrainparams.h  twgrainsource.h  twgrainspec.h  twlatch.h  twloopreader.h  twmixer.h  twmoog.h  twnegotiator.h  twosc.h  twpipe.h  twpluginchain.h  twplugininsert.h  (+15 more)
(+743 files in other folders)
